--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "server": "nodemon server.js",
     "dev": "set NODE_ENV=dev && webpack",
     "build": "webpack -p",
-    "watch": "set NODE_ENV=dev && webpack --watch",
-    "start": "set NODE_ENV=dev && webpack-dev-server --open"
+    "watch": "set NODE_ENV=dev && webpack --watch"
   },
   "browserslist": "> 0.5%, not dead",
   "author": "",
@@ -38,11 +37,14 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.10.3",
     "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
     "config": "^3.3.1",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.10",
@@ -52,6 +54,7 @@
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validator": "^13.0.0"
   }
 }
