--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon server.js",
-    "dev": "set NODE_ENV=dev && webpack",
-    "build": "webpack -p",
-    "watch": "set NODE_ENV=dev && webpack --watch"
+    "dev": "webpack --config webpack.config.dev.js",
+    "build": "webpack --config webpack.config.prod.js"
   },
   "browserslist": "> 0.5%, not dead",
   "author": "",
