--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "server": "nodemon server.js",
     "dev": "webpack --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.prod.js"
+    "build": "webpack --config webpack.config.prod.js",
+    "start": "npm run build && cross-env NODE_ENV=prod node server.js"
   },
-  "browserslist": "> 0.5%, not dead",
+  "browserslist": "> .5% and last 2 versions",
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -24,15 +25,15 @@
     "@types/react-transition-group": "^4.2.4",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.0",
     "nodemon": "^2.0.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^3.0.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
