--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "@types/react-transition-group": "^4.2.4",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.0",
     "nodemon": "^2.0.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
@@ -49,6 +49,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
+    "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
